--- a/templates/index.html
+++ b/templates/index.html
@@ -18,28 +18,30 @@
         <h1> Item Details</h1>
         <form method="POST">
             {% csrf_token %}
-            <label>Quantity</label>
-            <label>Item Description</label>
-            <label>Shelf Price</label>
             <div class="container">
+                <div class="item0">
+                    <label>Quantity</label>
+                    <label>Item Description</label>
+                    <label>Shelf Price</label>
+                </div>
                 <div class="item1">
                     <input type="number" name="item1" value="">
-                    <input type="item-description" name="item1-descr" value="">
+                    <input type="text" name="item1-descr" value="">
                     <input type="text" name="price1" value="">
                 </div>
                 <div class="item2">
                     <input type="number" name="item2" value="">
-                    <input type="item-description" name="item2-descr" value="">
+                    <input type="text" name="item2-descr" value="">
                     <input type="text" name="price2" value="">
                 </div>
                 <div class="item3">
                     <input type="number" name="item3" value="">
-                    <input type="item-description" name="item3-descr" value="">
+                    <input type="text" name="item3-descr" value="">
                     <input type="text" name="price3" value="">
                 </div>
                 <div class="item4">
                     <input type="number" name="item4" value="">
-                    <input type="item-description" name="item4-descr" value="">
+                    <input type="text" name="item4-descr" value="">
                     <input type="text" name="price4" value="">
                 </div>
             </div>
