--- a/templates/result.html
+++ b/templates/result.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'css/result-style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/print.js' %}"></script>
     <title>Results</title>
 </head>
 
@@ -37,6 +38,9 @@
         <div class="total-price">
             Total-price: &emsp; {{ total_price }}
         </div>
+    </div>
+    <div class="print" onclick="printScreen(event)">
+        <button>Generate PDF</button>
     </div>
 </body>
 
