--- a/static/css/index-style.css
+++ b/static/css/index-style.css
@@ -4,20 +4,35 @@ html {
 header {
   text-align: center;
 }
+section.item-details {
+  background-color: white;
+  margin-top: 50px;
+  padding: 20px 35px;
+  border-radius: 35px;
+  margin: 50px 20%;
+}
 .container {
   display: grid;
-  margin: 0px 20%;
+  /* margin: 0px 20%; */
   row-gap: 30px;
 }
 input {
   display: block;
   border-radius: 10px;
-  height: 20px;
+  height: 30px;
   border: 0px;
+  background-color: rgb(200, 200, 200);
 }
 label {
   display: block;
   margin: auto;
+  border: 1px solid;
+  width: 100%;
+  text-align: center;
+  background-color: #009879;
+  color: white;
+  padding: 0.3em;
+  border-radius: 10px;
 }
 
 .container > div {
@@ -34,9 +49,10 @@ input[type="submit"] {
   margin: 30px auto;
   padding: 0.5em 1.5em 0.5em 1.5em;
   background-color: rgb(34, 143, 227);
+  color: white;
   height: auto;
 }
 
-h1 {
+/* h1 {
   margin: 20px 20%;
-}
+} */
