--- a/templates/index.html
+++ b/templates/index.html
@@ -26,24 +26,24 @@
                     <label>Shelf Price</label>
                 </div>
                 <div class="item1">
-                    <input type="number" name="item1" value="">
-                    <input type="text" name="item1-descr" value="">
-                    <input type="text" name="price1" value="">
+                    <input type="number" name="item-qty-1" value="" min="1">
+                    <input type="text" name="item-descr-1" value="">
+                    <input type="text" name="price-1" value="">
                 </div>
                 <div class="item2">
-                    <input type="number" name="item2" value="">
-                    <input type="text" name="item2-descr" value="">
-                    <input type="text" name="price2" value="">
+                    <input type="number" name="item-qty-2" value="" min="1">
+                    <input type="text" name="item-descr-2" value="">
+                    <input type="text" name="price-2" value="">
                 </div>
                 <div class="item3">
-                    <input type="number" name="item3" value="">
-                    <input type="text" name="item3-descr" value="">
-                    <input type="text" name="price3" value="">
+                    <input type="number" name="item-qty-3" value="" min="1">
+                    <input type="text" name="item3-descr-3" value="">
+                    <input type="text" name="price-3" value="">
                 </div>
                 <div class="item4">
-                    <input type="number" name="item4" value="">
-                    <input type="text" name="item4-descr" value="">
-                    <input type="text" name="price4" value="">
+                    <input type="number" name="item-qty-4" value="" min="1">
+                    <input type="text" name="item-descr-4" value="">
+                    <input type="text" name="price-4" value="">
                 </div>
             </div>
             <input type="submit">
