--- a/static/css/result-style.css
+++ b/static/css/result-style.css
@@ -15,7 +15,7 @@ section {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr;
   /* margin: 0px 20%; */
   text-align: center;
   row-gap: 20px;
@@ -63,9 +63,10 @@ section {
 .item-description1,
 .price1,
 .tax1,
-.item-total {
+.item-total,
+.qty1 {
   font-weight: 500;
-  font-size: large;
+  font-size: medium;
   /* border: 1px solid black; */
   background-color: #009879;
   padding: 0.3em;
