--- a/templates/result-test.html
+++ b/templates/result-test.html
@@ -8,7 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'css/result-style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/print.js' %}"></script>
+    <!-- <script src="{% static 'js/print.js' %}"></script> -->
+    {% for path in paths %}
+    <script src="{{path}}"></script>
+    {% endfor %}
     <script src="{% static 'js/conversion.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <title>Results</title>
@@ -46,7 +49,7 @@
         </div>
         <div class="main-container">
             {% for value in context %}
-            <div class="container">
+            <div class="container values">
                 <div class="qty">
                     {{ value.qty }}
                 </div>
@@ -72,29 +75,37 @@
             </div>
         </div>
         <div class="print">
-            <button onclick="printScreen(event)">Generate PDF</button>
-            <button onclick="Export2Word('content','file-content')"> Generate Word</button>
+            <!-- <button onclick="printScreen(event)">Generate PDF</button> -->
+            <!-- <button onclick="a"> Generate Word</button> -->
+            {% for plug in plugins %}
+            <button onclick="{{ plug }}()">Generate {{plug}}</button>
+            {% endfor %}
         </div>
     </section>
-    <script>
+    <!-- <script>
         function Export2Word(element, filename = '') {
             var preHtml =
                 "<html xmlns:o='urn:schemas-microsoft-com:office:office' xmlns:w='urn:schemas-microsoft-com:office:word' xmlns='http://www.w3.org/TR/REC-html40'><head><meta charset='utf-8'><title>Export HTML To Doc</title></head><body>";
             var postHtml = "</body></html>";
             var doc = "";
             for (let element of document.getElementsByClassName("head")) {
+                doc = doc + element.getElementsByClassName("qty1")[0].innerText + "&emsp" + "&emsp"
                 doc = doc + element.getElementsByClassName("item-description1")[0].innerText + "&emsp" + "&emsp"
                 doc = doc + element.getElementsByClassName("price1")[0].innerText + "&emsp" + "&emsp"
                 doc = doc + element.getElementsByClassName("tax1")[0].innerText + "&emsp" + "&emsp"
                 doc = doc + element.getElementsByClassName("item-total")[0].innerText + "&emsp" + "&emsp"
+                doc = doc + "<br>";
             }
-            for (let element of document.getElementsByClassName("container")) {
-                doc = doc + element.getElementsByClassName("item-description1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("price1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("tax1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("item-total")[0].innerText + "&emsp" + "&emsp"
+
+            for (let element of document.getElementsByClassName("values")) {
+                doc = doc + element.getElementsByClassName("qty")[0].innerText + "&emsp" + "&emsp"
+                doc = doc + element.getElementsByClassName("item-description")[0].innerText + "&emsp" + "&emsp"
+                doc = doc + element.getElementsByClassName("price")[0].innerText + "&emsp" + "&emsp"
+                doc = doc + element.getElementsByClassName("tax")[0].innerText + "&emsp" + "&emsp"
+                doc = doc + element.getElementsByClassName("total")[0].innerText + "&emsp" + "&emsp"
+                doc = doc + "<br>";
             }
-            var html = preHtml + "vamsi" + "<br>" + "vamsi" + "vamsi" + "&emsp;" + "vamsi" + postHtml;
+            var html = preHtml + doc + postHtml;
             var blob = new Blob(['\ufeff', html], {
                 type: 'application/msword'
             });
@@ -124,6 +135,11 @@
             }
 
             document.body.removeChild(downloadLink);
+        }
+    </script> --> -->
+    <!-- <script>
+        function Export2Word(element, filename = '') {
+
         }
     </script>
 </body>
