--- a/templates/result.html
+++ b/templates/result.html
@@ -8,9 +8,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'css/result-style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/print.js' %}"></script>
+    <link href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/buttons/2.1.0/css/buttons.dataTables.min.css" rel="stylesheet">
+    <!-- <script src="{% static 'js/print.js' %}"></script> -->
     <script src="{% static 'js/conversion.js' %}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.1.0/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.1.0/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.1.0/js/buttons.print.min.js"></script>
+
     <title>Results</title>
 </head>
 
@@ -27,7 +38,7 @@
                 <option value="INR" id="INR">INR</option>
             </select>
         </div>
-        <div class="container head">
+        <!-- <div class="container head">
             <div class="qty1">
                 Qty
             </div>
@@ -45,22 +56,22 @@
             </div>
         </div>
         <div class="main-container">
-            {% for key,value in context.items %}
-            <div class="container">
+            {% for value in context %}
+            <div class="container values">
                 <div class="qty">
                     {{ value.qty }}
                 </div>
                 <div class="item-description">
-                    {{ value.item_descr }}
+                    {{ value.item_desc }}
                 </div>
-                <div class="price change" value="{{ value.price }}">
-                    {{ value.price }}
+                <div class="price change" value="{{ value.item_price }}">
+                    {{ value.item_price }}
                 </div>
-                <div class="tax change" value="{{ value.tax }}">
-                    {{ value.tax }}
+                <div class="tax change" value="{{ value.item_tax }}">
+                    {{ value.item_tax }}
                 </div>
-                <div class="total change" value="{{ value.total }}">
-                    {{ value.total }}
+                <div class="total change" value="{{ value.item_total }}">
+                    {{ value.item_total }}
                 </div>
             </div>
             {% endfor %}
@@ -70,61 +81,86 @@
             <div class="total-price-desc">
                 Total-price: &emsp; <span class="total-price change" value="{{ total_price }}">{{ total_price }}</span>
             </div>
+        </div> -->
+        <table id="example" class="display nowrap">
+            <thead>
+                <tr>
+                    <th>Qty</th>
+                    <th>Item Name</th>
+                    <th>Price</th>
+                    <th>Tax</th>
+                    <th> Total Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for value in context %}
+                <tr>
+                    <td> {{ value.qty }} </td>
+                    <td> {{ value.item_desc }} </td>
+                    <td class="change" value="{{value.item_price}}"> {{ value.item_price }} </td>
+                    <td class="change" value="{{ value.item_tax }}"> {{ value.item_tax }} </td>
+                    <td class="change" value="{{ value.item_total }}"> {{ value.item_total }} </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <div class="total-tax-desc">
+            Total-tax: &emsp; <span class="total-tax change" value="{{ total_tax }}">{{ total_tax }}</span>
+        </div>
+        <div class="total-price-desc">
+            Total-price: &emsp; <span class="total-price change" value="{{ total_price }}">{{ total_price }}</span>
         </div>
         <div class="print">
             <button onclick="printScreen(event)">Generate PDF</button>
             <button onclick="Export2Word('content','file-content')"> Generate Word</button>
         </div>
     </section>
-    <script>
-        function Export2Word(element, filename = '') {
-            var preHtml =
-                "<html xmlns:o='urn:schemas-microsoft-com:office:office' xmlns:w='urn:schemas-microsoft-com:office:word' xmlns='http://www.w3.org/TR/REC-html40'><head><meta charset='utf-8'><title>Export HTML To Doc</title></head><body>";
-            var postHtml = "</body></html>";
-            var doc = "";
-            for (let element of document.getElementsByClassName("head")) {
-                doc = doc + element.getElementsByClassName("item-description1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("price1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("tax1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("item-total")[0].innerText + "&emsp" + "&emsp"
+    <!-- <script>
+        window.export.onclick = function () {
+
+            if (!window.Blob) {
+                alert('Your legacy browser does not support this action.');
+                return;
             }
-            for (let element of document.getElementsByClassName("container")) {
-                doc = doc + element.getElementsByClassName("item-description1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("price1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("tax1")[0].innerText + "&emsp" + "&emsp"
-                doc = doc + element.getElementsByClassName("item-total")[0].innerText + "&emsp" + "&emsp"
-            }
-            var html = preHtml + "vamsi" + "<br>" + "vamsi" + "vamsi" + "&emsp;" + "vamsi" + postHtml;
-            var blob = new Blob(['\ufeff', html], {
+
+            var html, link, blob, url, css;
+
+            // EU A4 use: size: 841.95pt 595.35pt;
+            // US Letter use: size:11.0in 8.5in;
+
+            css = (
+                '<style>' +
+                '@page WordSection1{size: 841.95pt 595.35pt;mso-page-orientation: landscape;}' +
+                'div.WordSection1 {page: WordSection1;}' +
+                'table{border-collapse:collapse;}td{border:1px gray solid;width:5em;padding:2px;}' +
+                '</style>'
+            );
+
+            html = window.docx.innerHTML;
+            blob = new Blob(['\ufeff', css + html], {
                 type: 'application/msword'
             });
-
-            // Specify link url
-            var url = 'data:application/vnd.ms-word;charset=utf-8,' + encodeURIComponent(html);
-
-            // Specify file name
-            filename = filename ? filename + '.doc' : 'document.doc';
-
-            // Create download link element
-            var downloadLink = document.createElement("a");
-
-            document.body.appendChild(downloadLink);
-
-            if (navigator.msSaveOrOpenBlob) {
-                navigator.msSaveOrOpenBlob(blob, filename);
-            } else {
-                // Create a link to the file
-                downloadLink.href = url;
-
-                // Setting the file name
-                downloadLink.download = filename;
-
-                //triggering the function
-                downloadLink.click();
-            }
-
-            document.body.removeChild(downloadLink);
-        }
+            url = URL.createObjectURL(blob);
+            link = document.createElement('A');
+            link.href = url;
+            // Set default file name. 
+            // Word will append file extension - do not add an extension here.
+            link.download = 'Document';
+            document.body.appendChild(link);
+            if (navigator.msSaveOrOpenBlob) navigator.msSaveOrOpenBlob(blob, 'Document.doc'); // IE10-11
+            else link.click(); // other browsers
+            document.body.removeChild(link);
+        };
+    </script> -->
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable({
+                dom: 'Bfrtip',
+                buttons: [
+                    'copy', 'csv', 'excel', 'pdf', 'print'
+                ]
+            });
+        });
     </script>
 </body>
 
