--- a/templates/result-test.html
+++ b/templates/result-test.html
@@ -136,12 +136,12 @@
 
             document.body.removeChild(downloadLink);
         }
-    </script> --> -->
-    <!-- <script>
+    </script>
+    <script>
         function Export2Word(element, filename = '') {
 
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
