--- a/templates/index.html
+++ b/templates/index.html
@@ -28,22 +28,22 @@
                 <div class="item1">
                     <input type="number" name="item-qty-1" value="" min="1">
                     <input type="text" name="item-descr-1" value="">
-                    <input type="text" name="price-1" value="">
+                    <input type="number" name="price-1" value="" min=0 step="any">
                 </div>
                 <div class="item2">
                     <input type="number" name="item-qty-2" value="" min="1">
                     <input type="text" name="item-descr-2" value="">
-                    <input type="text" name="price-2" value="">
+                    <input type="number" name="price-2" value="" min=0 step="any">
                 </div>
                 <div class="item3">
                     <input type="number" name="item-qty-3" value="" min="1">
                     <input type="text" name="item3-descr-3" value="">
-                    <input type="text" name="price-3" value="">
+                    <input type="number" name="price-3" value="" min=0 step="any">
                 </div>
                 <div class="item4">
                     <input type="number" name="item-qty-4" value="" min="1">
                     <input type="text" name="item-descr-4" value="">
-                    <input type="text" name="price-4" value="">
+                    <input type="number" name="price-4" value="" min=0 step="any">
                 </div>
             </div>
             <input type="submit">
